# flake8-github-formatter

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
flake8_github_formatter/: __init__.py  formatters.py  utils.py
flake8_utils_reporters/: __init__.py  base.py  github.py  vso.py
tests/: test_entrypoint.py  test_reporters.py
