[tool.poetry]
name = "flake8-utils-reporters"
version = "0.1.0"
description = "flake8 formatter for github annotation"
authors = ["goatwu1993 <peteeelol@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flake8_utils_reporters"}]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
importlib-metadata = { version = "^6.1.0", python = "<3.10" }

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."flake8.report"]
github = "flake8_utils_reporters:GitHub"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["E", "F", "D400", "I", "W", "G", "S", "PIE"]
extend-ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["flake8_utils_reporters", "tests"]

[tool.ruff.per-file-ignores]
"**/tests/**/test*.py" = ["S101"]
